--- a/css/home.css
+++ b/css/home.css
@@ -39,8 +39,8 @@ body {
         height: auto;
     }
     .gameScreen {
-        width: 320px;
-        height: 100%;
+        width: 90%;
+        height: 620px;
         margin: auto;
         background-color: #13463F;
     }
@@ -373,8 +373,8 @@ body {
         height: auto;
     }
     .gameScreen {
-        width: 360px;
-        height: 100%;
+        width: 90%;
+        height: 620px;
         margin: auto;
         background-color: #13463F;
     }
@@ -650,8 +650,8 @@ body {
         height: auto;
     }
     .gameScreen {
-        width: 375px;
-        height: 100%;
+        width: 90%;
+        height: 620px;
         margin: auto;
         background-color: #13463F;
     }
@@ -922,8 +922,8 @@ body {
         height: auto;
     }
     .gameScreen {
-        width: 384px;
-        height: 100%;
+        width: 90%;
+        height: 620px;
         margin: auto;
         background-color: #13463F;
     }
@@ -1195,8 +1195,8 @@ body {
         height: auto;
     }
     .gameScreen {
-        width: 414px;
-        height: 100%;
+        width: 90%;
+        height: 620px;
         margin: auto;
         background-color: #13463F;
     }
@@ -1556,7 +1556,7 @@ body {
     }
     .gameArea {
         width: 100%;
-        height: 640px;
+        height: 620px;
         margin: auto;
         padding-top: 10px;
         padding-bottom: 10px;
@@ -1565,8 +1565,8 @@ body {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.6);
     }
     .gameScreen {
-        width: 360px;
-        height: 640px;
+        width: 90%;
+        height: 620px;
         background-color: #13463F;
         border: 3px solid #ffffff;
         border-radius: 5px;
@@ -1795,8 +1795,8 @@ body {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.6);
     }
     .gameScreen {
-        width: 360px;
-        height: 640px;
+        width: 90%;
+        height: 620px;
         background-color: #13463F;
         border: 3px solid #ffffff;
         border-radius: 5px;
@@ -1972,8 +1972,8 @@ body {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.6);
     }
     .gameScreen {
-        width: 360px;
-        height: 640px;
+        width: 90%;
+        height: 620px;
         background-color: #13463F;
         border: 3px solid #ffffff;
         border-radius: 5px;
